--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -29,13 +29,10 @@ $dark-platinum: #1c1c1c;
 $platinum: #2c2c2c;
 $light-platinum: #ddd;
 
-// Difficulty Colors
-$difficulty-easy-bg: #1a2d1f;
-$difficulty-easy-text: #55ca70;
-$difficulty-medium-bg: #2d2d1a;
-$difficulty-medium-text: #a78319;
-$difficulty-hard-bg: #2d1a1a;
-$difficulty-hard-text: #bc505a;
+// Status Colors
+$status-todo: #b60505;
+$status-progress: #0155ab;
+$status-done: #017001;
 
 // Spacing
 $spacing-xs: 0.25rem;
