Added better error handling; small improvements

--- a/src/components/TaskItem.module.scss
+++ b/src/components/TaskItem.module.scss
@@ -52,6 +52,9 @@
     .actionBtn {
       cursor: pointer;
       transition: all $transition-base;
+      background: none;
+      border: none;
+      color: $light-platinum;
     }
   }
 
